--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.ProductDetails{
+  justify-content: center;
+  display: flex;
+  margin-top: 100px ;
+  border: 2px solid rgb(46, 45, 45);
+  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.75);
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+
+.ProductDetails__image img{
+  width: 300px;
+  display: flex;
+  height: 300px;
+  justify-content: center;
+  margin: 0px auto;
+  border: 1px solid #acacac;
+}
+
+.ProductDetails__heading {
+    padding: 2rem;
+    text-align: left;
+}
+
+.ProductDetails__heading > h4{
+  text-decoration: underline;
+  color: rgb(138, 138, 138);
+}
+
+@media only screen and (max-width:850px){
+  .ProductDetails{
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Home__imgfooter{
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 1rem;
+  padding-top: 0.5rem;
+  transition: 0.3s ease-in-out;
+  border: 1px solid rgb(54, 54, 54);
+
+}
+
+.Home__imgfooter:hover{
+  background-color: rgb(54, 54, 54);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.makeStyles-paper-2{
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Home{
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-top: 40px;
 }
+.Women{
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-top: 40px;
+}
+.Men{
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-top: 40px;
+}
+
+
+
+.ProductDetails__cardfooter{
+  border: 1px solid rgb(82, 80, 80);
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 5px;
+  background-color: rgb(250, 249, 249);
+  padding-left:8px ;
+  padding-right: 8px;
+  margin-top: 2rem;
+  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
+  cursor: pointer;
+
+  
+}
+
+.ProductDetails__cardfooter:hover{
+  background-color: whitesmoke;
+}
+
+
+.Men__imagefooter{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+  padding-top: 0.5rem;
+  transition: 0.3s ease-in-out;
+  border: 1px solid rgb(54, 54, 54);
+}
+
+.Men__imagefooter:hover{
+  background-color: rgb(54, 54, 54);
+  color: white;
+}
+
+.navbar-nav a{
+  color: white;
+  font-size: 20px;
+  padding-right: 2rem;
+  text-decoration: none !important;
+  color: silver !important;
+  /* border: 2px solid red; */
+  padding-bottom: 5px !important;
+
+
+}
+.navbar-nav a:hover{
+  color: white !important;
+}
+
+a{
+  color: silver !important;
+  text-decoration: none !important;
+}
+
+
+.WOMEN__imagefooter{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+  padding-top: 0.5rem;
+  transition: 0.3s ease-in-out;
+  border: 1px solid rgb(54, 54, 54);
+}
+
+.WOMEN__imagefooter:hover{
+  background-color: rgb(54, 54, 54);
+  color: white;
+}
+
+.Men__textunderline:hover{
+  text-decoration: underline !important;
+}
+
+#Women__card:hover{
+  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
+
+}
+#Men__card:hover{
+  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
+
+}
+#Home__card:hover{
+  box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
+
+}
+
+
+
+
+
+
+
